Implementa calculadora de cadenas y FizzBuzz con tests completos

--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "parcel-jest-base",
   "version": "1.0.0",
-  "description": "",
-  "default": "index.html",
+  "description": "https://github.com/israelantezana/parcel-jest-base",
+  "homepage": "https://github.com/UCB-IngSoftware/CalculadoraCadenas-TDDLAB20251106#readme",
+  "bugs": {
+    "url": "https://github.com/UCB-IngSoftware/CalculadoraCadenas-TDDLAB20251106/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UCB-IngSoftware/CalculadoraCadenas-TDDLAB20251106.git"
+  },
+  "license": "ISC",
+  "author": "Israel Antezana R.",
   "type": "module",
+  "main": "cypress.config.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -15,8 +25,9 @@
     "semantic-commits-on": "node semantic-commits.js enable",
     "semantic-commits-off": "node semantic-commits.js disabled"
   },
-  "author": "Israel Antezana R.",
-  "license": "ISC",
+  "dependencies": {
+    "parcel-jest-base": "file:"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
@@ -28,7 +39,5 @@
     "jest": "^29.7.0",
     "parcel": "^2.12.0"
   },
-  "dependencies": {
-    "parcel-jest-base": "file:"
-  }
+  "default": "index.html"
 }
